Bugfix during config deletion.